--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     $(document).ready(function(){
 		
 		var keyword = "";
-        $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
+        $.getJSON("https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
         {
             tags: keyword,
             tagmode: "any",
