--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban"];
 		var nmr = Math.floor((Math.random() * keywords.length)+1);
 		var keyword = keywords[nmr];
-        $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
+        $.getJSON("https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
         {
             tags: keyword,
             tagmode: "any",
