--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     $(document).ready(function(){
 		
-		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban"];
+		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban","rain","sad","happy"];
 		var nmr = Math.floor((Math.random() * keywords.length)+1);
 		var keyword = keywords[nmr];
         $.getJSON("https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
@@ -25,7 +25,7 @@
     });
 
 	var f1 = ["não ","sempre ","nunca ", "sim, ", "como diriam os sabios: ", " ", "como diria caue: ","para ter sucesso, ","ao acelerar, ","com um sorriso no rosto ","", "pense bem antes que voce ", "", ""];
-	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não ao ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em "];
+	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não ao ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em ", "cante com um ", "empreste um ", "escreva sobre "];
 	var f3 = ["thiago","bola","carro","vulcão","mesa redonda", "sobrancelha", "jaca", "navio", "jumento", "medico", "restaurante", "Burger King", "capitalista", "capitalismo", "heliponto", "caue","uber","predio","martelo", "estacionamento", "avião de tripla helice", "iPad","celular","jantar romantico", "cachorro", "calice", "paulinho", "pedro"];
 	var n1 = Math.floor((Math.random() * f1.length) + 1);
 	var n2 = Math.floor((Math.random() * f2.length) + 1);
