--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
         });
     });
 
-	var f1 = ["não ","sempre ","nunca ", "sim, ", "como diriam os sabios: ", " ", "como diria caue: ","para ter sucesso, ","ao acelerar, ","com um sorriso no rosto ","", "pense bem antes que voce ", "", "", "talvez voce ","", "eu prefiro que voce ", "","concordo, porem ", "", ""];
-	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não ao ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em ", "cante com um ", "empreste um ", "escreva sobre ", "pule em cima de ", "faça transações comerciais com ", "coma um ", "dance com ", "pise em cima de ", "ria de ", "beba "];
-	var f3 = ["thiago","bola","carro","vulcão","mesa redonda", "sobrancelha", "jaca", "navio", "jumento", "medico", "restaurante", "Burger King", "capitalista", "capitalismo", "heliponto", "caue","uber","predio","martelo", "estacionamento", "avião de tripla helice", "iPad","celular","jantar romantico", "cachorro", "calice", "paulinho", "pedro", "tarcisio", "crise existencial", "jujuba","um pato", "Juan", "socialismo"];
-	var n1 = Math.floor((Math.random() * f1.length) + 1);
-	var n2 = Math.floor((Math.random() * f2.length) + 1);
-	var n3 = Math.floor((Math.random() * f3.length) + 1);
+	var f1 = ["não ","sempre ","nunca ", "sim, ", "como diriam os sabios: ", " ", "como diria caue: ","para ter sucesso, ","ao acelerar, ","com um sorriso no rosto ","", "pense bem antes que voce ", "", "", "talvez voce ","", "eu prefiro que voce ", "","concordo, porem ", "", "","para ter mais sorte na vida ","", "boa noite ", "bom dia ", "se voce estiver em uma situação de emergencia","",""];
+	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não ao ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em ", "cante com um ", "empreste um ", "escreva sobre ", "pule em cima de ", "faça transações comerciais com ", "coma um ", "dance com ", "pise em cima de ", "ria de ", "beba ", "enxugue ", "faça prova de ", "as vezes as dificuldades da vida são culpa apenas de ", "vista um ", "coloque um ","seja ", "considere ", "faça bullying com "];
+	var f3 = ["thiago","bola","carro","vulcão","mesa redonda", "sobrancelha", "jaca", "navio", "jumento", "medico", "restaurante", "Burger King", "capitalista", "capitalismo", "heliponto", "caue","uber","predio","martelo", "estacionamento", "avião de tripla helice", "iPad","celular","jantar romantico", "cachorro", "calice", "paulinho", "pedro", "tarcisio", "crise existencial", "jujuba","um pato", "Juan", "socialismo", "patinete", "bolsonaro", "Trombas", "estojo","microondas","macaco", "mamaco", "xavier"];
+	var n1 = Math.floor((Math.random() * f1.length)  );
+	var n2 = Math.floor((Math.random() * f2.length)  );
+	var n3 = Math.floor((Math.random() * f3.length)  );
 
 
 	var p1 = f1[n1];
 	var p2 = f2[n2];
 	var p3 = f3[n3];
 
+	if(p1 == "undefined")
+		p1 = "";
+	if(p2 == "undefined")
+		p2 = "";
+	if(p3 == "undefined")
+		p3 = "";
+
 	var str = p1+p2+p3;
-
-
 
 	</script>
 	<style>
