--- a/index.html
+++ b/index.html
@@ -8,25 +8,21 @@
 		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban","rain","sad","happy","nature","animal", "lofi","vulkan","thunder","flower","stars","cat"];
 		var nmr = Math.floor((Math.random() * keywords.length)+1);
 		var keyword = keywords[nmr];
-        $.getJSON("https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
-        {
-            tags: keyword,
-            tagmode: "any",
-            format: "json"
-        },
-        function(data) {
-            var rnd = Math.floor(Math.random() * data.items.length);
 
-            var image_src = data.items[rnd]['media']['m'].replace("_m", "_b");
+		fetch(`https://source.unsplash.com/random?`+keyword).then((response) => {   
+			let item = document.createElement('div');
+			item.classList.add('item');
+			item.innerHTML = `<img class="beach-image background-image" src="${response.url}" alt="beach image" id='imagem'/>`
+			document.body.appendChild(item);
 
-            $('body').css('background-image', "url('" + image_src + "')");
+	  }) 
 
-        });
+
     });
 
-	var f1 = ["não ","sempre ","nunca ", "sim, ", "como diriam os sabios: ", " ", "como diria caue: ","para ter sucesso, ","ao acelerar, ","com um sorriso no rosto ","", "pense bem antes que voce ", "", "", "talvez voce ","", "eu prefiro que voce ", "","concordo, porem ", "", "","para ter mais sorte na vida ","", "boa noite, ", "bom dia, ", "se voce estiver em uma situação de emergencia ","","", "ao respirar ","", "imagine que voce ", "não fique para baixo, ","acima de tudo ","","","Hey Rockers, ","Se a vida estiver ruim ","Se voce se sentir triste, não se preocupe, ","quando voce estiver solitario ","","","as vezes, a unica coisa que eu preciso é que voce ", "as vezes ", "para facilitar a sua vida ", "", "para concluir meus estudos preciso que voce ", "imagine uma nova historia onde voce ", "enquanto conversamos aproveite e ","","se todas as mentiras falam sobre o cotidiano, ","ao sentir que tudo esta indo a baixo, ","","se tudo parecer um desastre, ","","ao comparecer ao medico ", "preste atenção ao transito, ", "para que o feriado ocorra, ", "se o dia estiver nublado e chuvoso, não se desespere, "];
-	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "tenha atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não a ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em ", "cante com um ", "empreste um ", "escreva sobre ", "pule em cima de ", "faça transações comerciais com ", "coma um ", "dance com ", "pise em cima de ", "ria de ", "beba ", "enxugue ", "faça prova de ", "as vezes as dificuldades da vida são apenas culpa de ", "vista um ", "coloque um ","seja ", "considere ", "faça bullying com ","aceite ","forneça um ", "calcule ", "lembre-se, as vezes a razão prevalece o ","aceite, acima de tudo, ", "entregue o lanche em ", "faça comida para ", "discurse sobre o parnasianismo utopico com um ", "aprenda sobre ", "no jantar de natal, discuta sobre ", "retifique ", "a montanha russa não é tão divertida quanto ", "tome agua com ","discuta sobre a independencia da hungria com ","peça perdão por todos os seus crimes a ", "conquiste ", "limpe ", "toque ", "construa ", "peça, com cuidado, um ", "peça um holofote a ","a solidão depende apenas de "];
-	var f3 = ["thiago","bola","carro","vulcão","mesa redonda", "sobrancelha", "jaca", "navio", "jumento", "medico", "restaurante", "Burger King", "capitalista", "capitalismo", "heliponto", "caue","uber","predio","martelo", "estacionamento", "avião de tripla helice", "iPad","celular","jantar romantico", "cachorro", "calice", "paulinho", "pedro", "tarcisio", "crise existencial", "jujuba","pato", "Juan", "socialismo", "patinete", "bolsonaro", "Trombas", "estojo","microondas","macaco", "mamaco", "xavier", "eu lirico", "voce", "joelho", "stalin", "cavalo", "culinaria nervosa", "controle remoto", "poliester", "elastico", "tenis", "lider oligarquico", "rei ornamental", "rei pomposo", "rei", "salvador dali", "Vanderlei", "bicicleta aro 15", "estelionatario de bens materiais", "governador da groelandia", "vice consul de honduras", "auxiliar de fita crepe", "lombada eletronica", "quebra molas", "semaforo", "cotovelo", "butijão de gas", "fogão de 8 bocas"];
+	var f1 = ["não ","sempre ","nunca ", "sim, ", "como diriam os sabios: ", " ", "como diria caue: ","para ter sucesso, ","ao acelerar, ","com um sorriso no rosto ","", "pense bem antes que voce ", "", "", "talvez voce ","", "eu prefiro que voce ", "","concordo, porem ", "", "","para ter mais sorte na vida ","", "boa noite, ", "bom dia, ", "se voce estiver em uma situação de emergencia ","","", "ao respirar ","", "imagine que voce ", "não fique para baixo, ","acima de tudo ","","","Hey Rockers, ","Se a vida estiver ruim ","Se voce se sentir triste, não se preocupe, ","quando voce estiver solitario ","","","as vezes, a unica coisa que eu preciso é que voce ", "as vezes ", "para facilitar a sua vida ", "", "para concluir meus estudos preciso que voce ", "imagine uma nova historia onde voce ", "enquanto conversamos aproveite e ","","se todas as mentiras falam sobre o cotidiano, ","ao sentir que tudo esta indo a baixo, ","","se tudo parecer um desastre, ","","ao comparecer ao medico ", "preste atenção ao transito, ", "para que o feriado ocorra, ", "se o dia estiver nublado e chuvoso, não se desespere, ","se voce cometeu um crime, não se preocupe ","a policia esta na sua casa? ","","","está em duvida em relação a um assunto serio? não se preocupe, ","","se voce esta feliz ", "siga o caminho do seu coração, ", "","", "", "apos uma otima refeição, ", "o mundo inteiro esta a cair, mas preciso que voce ", "", "não se preocupe, tudo dará certo, desde que voce "];
+	var f2 = ["brinque com ", "jogue alguem no ", "leve seu amigo para ", "prometa que comprará um ", "coma feijão no ", "KALSKAKSADLKASK ", "tenha cuidado com ", "tenha atenção ao fazer um ", "construa um ", "coma ", "ligue para ", "visite um ", "faça um ", "quebre um ", "beba um ", "retorne ao ", "converse com ", "responda para o ", "diga não a ", "recuse frutas de ", "reutilize ", "passeie com ", "volte para ", "elimine ", "vista um ","recuse um ", "conte uma piada a ","se transforme em ", "cante com um ", "empreste um ", "escreva sobre ", "pule em cima de ", "faça transações comerciais com ", "coma um ", "dance com ", "pise em cima de ", "ria de ", "beba ", "enxugue ", "faça prova de ", "as vezes as dificuldades da vida são apenas culpa de ", "vista um ", "coloque um ","seja ", "considere ", "faça bullying com ","aceite ","forneça um ", "calcule ", "lembre-se, as vezes a razão prevalece o ","aceite, acima de tudo, ", "entregue o lanche em ", "faça comida para ", "discurse sobre o parnasianismo utopico com um ", "aprenda sobre ", "no jantar de natal, discuta sobre ", "retifique ", "a montanha russa não é tão divertida quanto ", "tome agua com ","discuta sobre a independencia da hungria com ","peça perdão por todos os seus crimes a ", "conquiste ", "limpe ", "toque ", "construa ", "peça, com cuidado, um ", "peça um holofote a ","a solidão depende apenas de ", "bata ", "pule de paraquedas com ", "forme uma banda com ","esqueça de ", "priorize o culto a ", "cultive um belo pé de manga com ", "tropece em ", "odeie ", "mumifique ", "aperte ", "use tecnicas de terraceamento em ", "passe ceramica em ", "jogue cola em ", "passe cola para ", "derrube o ", "extermine ", "impeça que a seguinte especie entre em extinção ", "traduza a lingua de ", "ajude ", "colabore com ", "convide para jantar ", "compre um pão de macaxeira para ", "dificulte as relações comerciais de ", "conquiste o coração de ", "se lembre que a unica coisa que importa é "];
+	var f3 = ["thiago","bola","carro","vulcão","mesa redonda", "sobrancelha", "jaca", "navio", "jumento", "medico", "restaurante", "Burger King", "capitalista", "capitalismo", "heliponto", "caue","uber","predio","martelo", "estacionamento", "avião de tripla helice", "iPad","celular","jantar romantico", "cachorro", "calice", "paulinho", "pedro", "tarcisio", "crise existencial", "jujuba","pato", "Juan", "socialismo", "patinete", "bolsonaro", "Trombas", "estojo","microondas","macaco", "mamaco", "xavier", "eu lirico", "voce", "joelho", "stalin", "cavalo", "culinaria nervosa", "controle remoto", "poliester", "elastico", "tenis", "lider oligarquico", "rei ornamental", "rei pomposo", "rei", "salvador dali", "Vanderlei", "bicicleta aro 15", "estelionatario de bens materiais", "governador da groelandia", "vice consul de honduras", "auxiliar de fita crepe", "lombada eletronica", "quebra molas", "semaforo", "cotovelo", "butijão de gas", "fogão de 8 bocas","brasil","arabia","nova guine","posto de gasolina", "rio jordão", "mato grosso", "mesa de 5 pernas", "embalagens plasticas", "lixeira", "frutos", "lisosomos", "helice", "ponte suspensa", "função quadratica", "panela de pressão", "frigideira", "trator", "marcos", "carro", "terra", "planeta", "terra plana", "marte", "foguete", "teclado", "violão", "musico", "guitarrista", "baterista", "vocalista dos beatles", "revolução baljeet", "luiz"];
 	var n1 = Math.floor((Math.random() * f1.length)  );
 	var n2 = Math.floor((Math.random() * f2.length)  );
 	var n3 = Math.floor((Math.random() * f3.length)  );
@@ -57,17 +53,19 @@
 	</script>
 	<style>
 		.centered {
- 			 position: absolute;
-		  top: 50%;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 			font-size:600%;
 			color: white;
-		  text-shadow: 6px 4px #000000;
+		    text-shadow: 6px 4px #000000;
 		}
 		.background-image{
 			position: center;
-		}
+			width:100%;
+			height: 100%;
+		}	
 		body{
 		  background-repeat: no-repeat;
 		  background-position: center;
@@ -94,6 +92,13 @@
 	var texto = document.getElementById('texto');
 	
 	var font = Math.floor(Math.random() * 3);
+	var dec = Math.floor(Math.random()*2);
+	if(dec == 0){
+		var r = Math.floor(Math.random()*255).toString(16);
+		var g = Math.floor(Math.random()*255).toString(16);
+		var b = Math.floor(Math.random()*255).toString(16);
+		texto.style.color = "#"+r+g+b;
+	}	
 	if(font == 0)
 		texto.style.fontFamily = "great";
 	else if(font == 1)
