--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     $(document).ready(function(){
 		
-		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban","rain","sad","happy","nature","animal", "lofi","vulkan","thunder","flower","stars","cat"];
+		var keywords = ["inspiring", "colorfull", "space","picnic","birds","urban","rain","sad","happy","nature","animal", "lofi","vulkan","thunder","flower","stars","cat","regret","letter"];
 		var nmr = Math.floor((Math.random() * keywords.length)+1);
 		var keyword = keywords[nmr];
 
