--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
 	var possibilidade1 = Math.floor((Math.random()*2));
 	
+	var p1 = "";
+		
 	if(possibilidade1 == 0)
-		var p1 = f1[n1];
+		p1 = f1[n1];
 	
 	var p2 = f2[n2];
 	var p3 = f3[n3];
